调换数据 关于我们和重要新闻两个界面

--- a/src/css/news.css
+++ b/src/css/news.css
@@ -10,10 +10,10 @@ a{
   text-decoration:none; 
 }
 .x-warp-end{
-background:rgba(0,0,0,.2);
+background:#ededed;
 width:1200px;
 padding:70px 0;
-
+margin-top:-10px;
 
 }
 .x-news-box{
