--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -318,19 +318,23 @@ a{
 .lunboTwo .slick-arrow.slick-next{
   display:block;
   width:110px;
-  height:250px;
-  top:20%;
+  height:150px;
+  top:40%;
   z-index:100;
-    background:red;
+  background:url('../imgs/jian_03.png') no-repeat;
+  background-size:60%;
+  right:10%;
 
 }
 .lunboTwo .slick-arrow.slick-prev{
-   display:block;
+  display:block;
   width:110px;
-  height:250px;
-  top:20%;
+  height:150px;
+  top:40%;
   z-index:100;
-  background:red;
+  background:url('../imgs/jian_07.png') no-repeat;
+   background-size:60%;
+   left:10%;
 }
 .lunboTwo .ant-carousel .lun-box{
   width:930px;
@@ -340,20 +344,29 @@ a{
   width:640px;
   height:30px;
   margin:0 auto;
-
 }
 .lunboTwo .ant-carousel .lun-box ul li{
   float:left;
   width:210px;
-  height:140px;
-  background:red;
+  height:132px;
   border:1px solid #ccc;
+  box-shadow:border-box;
+  position:relative;
 }
 .lunboTwo .ant-carousel .lun-box ul li div{
   float:left;
   width:210px;
-  height:140px;
-  background:rgba(0,0,0,.3);
+  height:132px;
+  padding:20px 35px;
+ background-color: rgba(46,87,150,.85);
+ position:absolute;
+ z-index:100;
+ left:0;
+ top:0;
+ color:#fff;
+ font-size:12px;
+ opacity:0;
+transition:1s;
 
 }
 
@@ -389,9 +402,28 @@ height:195px;
     padding: 0px 30px;
 
 }
-
-
-
-
+.line-bg img{
+  position:absolute;
+  width:98%;
+  left:0px;
+  right:0;
+  top:0;
+  bottom:0;
+  margin:auto auto;
+  display:none;
+} 
+.line-bg a:first-child img{
+  display:block;
+}
+.none{
+  display:none;
+}
+.blo{
+  display:block;
+}
+.rong img{
+  width:100%;
+  height:90%;
+}
 
 
