--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -52,11 +52,7 @@ a{
   top:18px;
   right:0;
 } 
-/* .listS{
-  overflow:hidden;
-  width:1000px;
-  background:red;
-} */
+
 .listS h4{
   text-align:center;
   font-size:20px;
@@ -316,10 +312,11 @@ a{
   color: #fff;
 }
 .lunboTwo .slick-arrow.slick-next{
-  display:block;
+ display:block;
   width:110px;
   height:150px;
-  top:40%;
+  top:50%;
+  margin-top:-75px;
   z-index:100;
   background:url('../imgs/jian_03.png') no-repeat;
   background-size:60%;
@@ -330,11 +327,12 @@ a{
   display:block;
   width:110px;
   height:150px;
-  top:40%;
+  top:50%;
   z-index:100;
+  margin-top:-75px;
   background:url('../imgs/jian_07.png') no-repeat;
-   background-size:60%;
-   left:10%;
+  background-size:60%;
+  left:10%;
 }
 .lunboTwo .ant-carousel .lun-box{
   width:930px;
