--- a/src/css/Enterprise.css
+++ b/src/css/Enterprise.css
@@ -16,6 +16,16 @@
     height: 100%;
 	background:url(../imgs/bg.jpg) no-repeat 50% 0;
 	background-size: cover;
+	animation: 2s scaleIn cubic-bezier(.215,.61,.355,1) 1;
+    transition: all .5s;
+}
+@keyframes scaleIn {
+	0% {
+    	transform: scale(1.1);
+	}
+	100% {
+	    transform: scale(1);
+	}
 }
 .enterBtn{
 	width:100%;
