--- a/src/css/Finance.css
+++ b/src/css/Finance.css
@@ -23,11 +23,23 @@ a{
 
 }
 .banJR{
+  width:100%;
   height:500px;
   position:absolute;
   left:0;
   top:0;
-  z-index:-1;
+  background:url(../imgs/grjr.jpg) no-repeat 50% 0;
+  background-size: cover;
+  animation: 2s scaleIn cubic-bezier(.215,.61,.355,1) 1;
+  transition: all .5s;
+}
+@keyframes scaleIn {
+  0% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
 }
 .banJR img{
   width:100vw;
