--- a/src/css/Bank.css
+++ b/src/css/Bank.css
@@ -12,7 +12,7 @@
 	width:50%;
 	height:100%;
 }
-
+/* 左侧轮播部分 */
 .WeiLunB{
 	width:237px;
 	height:478px;
@@ -95,16 +95,10 @@
     z-index: 0;
     width:100%;
     height: 100%;
-	background:url(../imgs/intro_app.jpg) no-repeat 50% 0;
+	background:url(http://localhost:8005/images/1501816221564.jpg) no-repeat 50% 0;
 	background-size: cover;
 }
  
-
-
-
-
-
-
 
 .enterBtn{
 	width:100%;
