--- a/src/css/Enterprise.css
+++ b/src/css/Enterprise.css
@@ -14,7 +14,7 @@
     z-index: 0;
     width:100%;
     height: 100%;
-	background:url(../imgs/bg.jpg) no-repeat 50% 0;
+	background:url(http://localhost:8005/images/1501816038241.jpg) no-repeat 50% 0;
 	background-size: cover;
 	animation: 2s scaleIn cubic-bezier(.215,.61,.355,1) 1;
     transition: all .5s;
