--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,7 +9,7 @@
     bottom: 0;
     z-index: 0;
     height: 100vh;
-    background: url(http://localhost:8005/images/1501815693220.jpg) no-repeat 50% 0;
+    background: url(../imgs/intro-35fd714069.jpg) no-repeat 50% 0;
     background-size: cover;
     text-align: center;
     transform-origin: 50% 50%;
