--- a/src/css/Detail.css
+++ b/src/css/Detail.css
@@ -25,7 +25,7 @@
     z-index: 0;
     width:100%;
     height: 100%;
-	background:url(../imgs/intro.jpg) no-repeat 50% 0;
+	background:url(http://localhost:8005/images/1501818169271.jpg) no-repeat 50% 0;
 	background-size: cover;
 }
 .lunBox .ant-carousel{
