--- a/src/css/Weiche.css
+++ b/src/css/Weiche.css
@@ -77,7 +77,7 @@
     z-index: 0;
     width:100%;
     height: 100%;
-	background:url(../imgs/intro_wcd.jpg) no-repeat 50% 0;
+	background:url(http://localhost:8005/images/1501818226100.jpg) no-repeat 50% 0;
 	background-size: cover;
 }
  
